# dsba-6156

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.html  README.md  docker-compose-dev.yml  docker-compose.yml  faiss_document_store  faiss_document_store.db  faiss_document_store.json  pyproject.toml  requirements.txt  tst.txt
.github/: pull_request_template.md
.github/workflows/: ci.yaml
.streamlit/: config.toml
src/api/: directory.json  main.py  models.py  search.py
src/api/data/: us-500.csv  us-500.json
src/api/utils/: logger.py  scrape.py
src/search/: common.py  faq.py  logger.py  semantic.py
src/search/data/: marcus_aurelius.txt  uncc_ethics_policy.txt
src/ui/: 01_🏠_Home.py  streamlit_app.py
src/ui/common/: logger.py  requests_common.py  uncc_logo.py
src/ui/pages/: 02_⬆️_Upload_Files.py  03_❓_Search.py  03_👀_Index_Viewer.py  04_⚙️_Admin_Config.py  04_⚙️_Admin_Panel.py  04_❓_Search.py  05_⚙️_Admin_Panel.py  05_⚡️_Generation.py  06_⚙️_Admin_Panel.py
